UI complete without connected

--- a/src/main/resources/com/example/newspaperclassification/hello-view.fxml
+++ b/src/main/resources/com/example/newspaperclassification/hello-view.fxml
@@ -1,16 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.newspaperclassification.HelloController">
+<VBox alignment="CENTER" prefHeight="516.0" prefWidth="840.0" spacing="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.newspaperclassification.HelloController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
+   <Label prefHeight="57.0" prefWidth="177.0" text="Input your news">
+      <font>
+         <Font name="Bookman Old Style Bold Italic" size="18.0" />
+      </font>
+   </Label>
+   <TextArea fx:id="textArea" onInputMethodTextChanged="#textFieldController" prefHeight="200.0" prefWidth="200.0" />
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Label fx:id="welcomeText" />
+    <Button alignment="CENTER" contentDisplay="CENTER" nodeOrientation="LEFT_TO_RIGHT" onAction="#onClassifyButtonClick" prefHeight="46.0" prefWidth="96.0" text="Classify" textAlignment="CENTER">
+      <font>
+         <Font name="System Bold" size="18.0" />
+      </font></Button>
+   <Label fx:id="classificationLabel" alignment="CENTER" lineSpacing="10.0" prefHeight="47.0" prefWidth="173.0">
+      <font>
+         <Font name="Bodoni MT Bold" size="24.0" />
+      </font>
+      <VBox.margin>
+         <Insets bottom="20.0" right="20.0" />
+      </VBox.margin>
+   </Label>
+   <HBox>
+      <children>
+         <CheckBox mnemonicParsing="false" onAction="#addTrainingSectionCheckBox" onKeyPressed="#addTrainingSectionCheckBox" text="Satisfy with this classification" />
+      </children>
+      <VBox.margin>
+         <Insets bottom="20.0" left="20.0" right="20.0" />
+      </VBox.margin>
+   </HBox>
 </VBox>
