--- a/src/main/resources/com/example/newspaperclassification/hello-view.fxml
+++ b/src/main/resources/com/example/newspaperclassification/hello-view.fxml
@@ -32,9 +32,13 @@
    <HBox>
       <children>
          <CheckBox mnemonicParsing="false" onAction="#addTrainingSectionCheckBox" onKeyPressed="#addTrainingSectionCheckBox" text="Satisfy with this classification" />
+         <ChoiceBox fx:id="choiceId" onInputMethodTextChanged="#checkboxController" onKeyPressed="#checkboxController" onKeyTyped="#checkboxController" prefWidth="150.0" />
       </children>
       <VBox.margin>
          <Insets bottom="20.0" left="20.0" right="20.0" />
       </VBox.margin>
+      <padding>
+         <Insets left="20.0" />
+      </padding>
    </HBox>
 </VBox>
